--- a/BicycleRentals_en.ipynb
+++ b/BicycleRentals_en.ipynb
@@ -4455,7 +4455,7 @@
     "### 7. Comparison of metrics\n",
     "\n",
     "\n",
-    "At this point we can answer our third question of the exercise: **From the comparative table, which model offers the best performance on the test set? What interpretation can you give to the values ​​obtained from the performance metrics?**\n",
+    "**From the comparative table, which model offers the best performance on the test set? What interpretation can you give to the values ​​obtained from the performance metrics?**\n",
     "\n",
     "Let's find out:\n",
     "\n",
