--- a/BicycleRentals_en.ipynb
+++ b/BicycleRentals_en.ipynb
@@ -635,46 +635,91 @@
     }
    ],
    "source": [
+    "# This line ensures that matplotlib plots are displayed inline within Jupyter notebooks\n",
     "%matplotlib inline\n",
     "\n",
+    "# Splitting the dataframe into categorical and numerical features\n",
+    "# Dropping 'cnt', 'windspeed', 'hum', 'atemp', 'temp' to keep only categorical features\n",
     "x_data_categ = df_raw.drop(['cnt', 'windspeed', 'hum', 'atemp', 'temp'], axis=1)\n",
+    "\n",
+    "# Dropping 'cnt', 'weekday', 'season', 'time_of_day', 'weathersit' to keep only numerical features\n",
     "x_data = df_raw.drop(['cnt', 'weekday', 'season', 'time_of_day', 'weathersit'], axis=1)\n",
+    "\n",
+    "# The target variable is the 'cnt' column which contains the rental counts\n",
     "y_data = df_raw['cnt']\n",
     "\n",
+    "# Creating a figure with 2 rows and 2 columns for subplots, and setting the figure size\n",
     "figure, axis = plt.subplots(2, 2, figsize=(12, 8))\n",
+    "\n",
+    "# Flattening the array of axes for easier iteration\n",
     "flattenedAxis = axis.flatten()\n",
-    "plt.subplots_adjust(hspace = 0.3)\n",
     "\n",
+    "# Adjusting the space between the subplots\n",
+    "plt.subplots_adjust(hspace=0.3)\n",
+    "\n",
+    "# Initializing the index for the subplot array\n",
     "i = 0\n",
-    "for (columnName, columnData) in x_data_categ.items():  \n",
+    "\n",
+    "# Looping through the categorical features to create bar plots\n",
+    "for (columnName, columnData) in x_data_categ.items():\n",
+    "    # Setting the title of the subplot\n",
     "    flattenedAxis[i].set_title('Rentals distribution by ' + columnName)\n",
-    "    flattenedAxis[i].bar(columnData, y_data)\n",
-    "    flattenedAxis[i].set_xlabel(columnName) \n",
-    "    flattenedAxis[i].set_ylabel('Rentals')\n",
-    "    flattenedAxis[i].set_yscale('linear')\n",
-    "    i += 1\n",
-    "#     print(i)\n",
     "    \n",
-    "plt.show()\n",
-    "\n",
-    "figure2 , axis2 = plt.subplots(4, 1, figsize=(16, 10))\n",
-    "flattenedAxis2 = axis2.flatten()\n",
-    "plt.subplots_adjust(hspace = 0.7)\n",
-    "\n",
-    "i = 0\n",
-    "for (columnName, columnData) in x_data.items(): \n",
-    "    flattenedAxis2[i].set_title('Rentals distribution by ' + columnName)\n",
-    "    flattenedAxis2[i].bar(columnData, y_data)\n",
-    "    #flattenedAxis2[i].set_xlabel( columnName ) \n",
-    "    flattenedAxis2[i].set_ylabel('Rentals')\n",
-    "    flattenedAxis2[i].set_yscale('linear')\n",
-    "    flattenedAxis2[i].tick_params(labelrotation=90)\n",
-    "    flattenedAxis2[i].xaxis.set_major_formatter(FormatStrFormatter('%.2f'))\n",
+    "    # Creating a bar plot for the current categorical feature\n",
+    "    flattenedAxis[i].bar(columnData, y_data)\n",
+    "    \n",
+    "    # Setting the x-axis label\n",
+    "    flattenedAxis[i].set_xlabel(columnName)\n",
+    "    \n",
+    "    # Setting the y-axis label\n",
+    "    flattenedAxis[i].set_ylabel('Rentals')\n",
+    "    \n",
+    "    # Setting the y-axis scale to linear\n",
+    "    flattenedAxis[i].set_yscale('linear')\n",
+    "    \n",
+    "    # Incrementing the index for the next subplot\n",
     "    i += 1\n",
-    "#     print(i)\n",
     "\n",
+    "# Displaying the plots\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "# Creating a second figure with 4 rows and 1 column for subplots, and setting the figure size\n",
+    "figure2, axis2 = plt.subplots(4, 1, figsize=(16, 10))\n",
+    "\n",
+    "# Flattening the array of axes for easier iteration\n",
+    "flattenedAxis2 = axis2.flatten()\n",
+    "\n",
+    "# Adjusting the space between the subplots\n",
+    "plt.subplots_adjust(hspace=0.7)\n",
+    "\n",
+    "# Initializing the index for the subplot array\n",
+    "i = 0\n",
+    "\n",
+    "# Looping through the numerical features to create bar plots\n",
+    "for (columnName, columnData) in x_data.items():\n",
+    "    # Setting the title of the subplot\n",
+    "    flattenedAxis2[i].set_title('Rentals distribution by ' + columnName)\n",
+    "    \n",
+    "    # Creating a bar plot for the current numerical feature\n",
+    "    flattenedAxis2[i].bar(columnData, y_data)\n",
+    "    \n",
+    "    # Setting the y-axis label\n",
+    "    flattenedAxis2[i].set_ylabel('Rentals')\n",
+    "    \n",
+    "    # Setting the y-axis scale to linear\n",
+    "    flattenedAxis2[i].set_yscale('linear')\n",
+    "    \n",
+    "    # Rotating the x-axis labels for better readability\n",
+    "    flattenedAxis2[i].tick_params(labelrotation=90)\n",
+    "    \n",
+    "    # Formatting the x-axis labels to two decimal places\n",
+    "    flattenedAxis2[i].xaxis.set_major_formatter(FormatStrFormatter('%.2f'))\n",
+    "    \n",
+    "    # Incrementing the index for the next subplot\n",
+    "    i += 1\n",
+    "\n",
+    "# Displaying the plots\n",
+    "plt.show()"
    ]
   },
   {
@@ -4455,7 +4500,7 @@
     "### 7. Comparison of metrics\n",
     "\n",
     "\n",
-    "**From the comparative table, which model offers the best performance on the test set? What interpretation can you give to the values ​​obtained from the performance metrics?**\n",
+    "🎉 **From the comparative table, which model offers the best performance on the test set? What interpretation can you give to the values ​​obtained from the performance metrics?**\n",
     "\n",
     "Let's find out:\n",
     "\n",
